[tool.poetry]
name = "maze-solver"
version = "0.1.0"
description = ""
authors = ["Palmer Turley <palmerturley34@gmail.com>"]
readme = "README.md"
packages = [{include = "maze_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
ttkbootstrap = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
